--- a/personal/atelier-personnage/index.html
+++ b/personal/atelier-personnage/index.html
@@ -21,7 +21,7 @@
                 <source src="videos/ScreenRecording_10-25-2025 15-01-53_1.mov" type="video/mp4" />
             </video>
             <div class="video-text">
-                <p class="hero-title">A REFLECTION OF MYSELF</p>
+                <p class="hero-title">A Reflection Of Myself</p>
                 <a href="#" class="btn">DISCOVER MORE</a>
             </div>
         </div>
