--- a/personal/atelier-personnage/saved.html
+++ b/personal/atelier-personnage/saved.html
@@ -1,67 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Saved Items | Atelier Personnage</title>
-    <link href="css/style.css" rel="stylesheet" />
-    <link href="css/saved.css" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-    />
-  </head>
-  <body>
-    <div id="header-placeholder"></div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Saved Items | Atelier Personnage</title>
+        <link href="css/style.css" rel="stylesheet" />
+        <link href="css/saved.css" rel="stylesheet" />
+        <link rel="stylesheet"
+              href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+    </head>
 
-    <main class="saved-page">
-      <section class="section">
-        <h3>WISHLIST</h3>
-      </section>
+    <body>
+        <div id="header-placeholder"></div>
 
-      <div id="saved-items-container" class="saved-container">
-        <p class="empty-message">Your list is empty</p>
-        <a href="shop.html" class="saved-button">Continue Shopping</a>
-      </div>
-    </main>
+        <main class="saved-page">
+            <section class="section">
+                <h3>WISHLIST</h3>
+            </section>
 
-    <!-- Floating color dropdown -->
-<div id="colorDropdown" class="size-dropdown" aria-hidden="true">
-  <ul class="size-dropdown-list" role="menu" aria-label="Colors"></ul>
-</div>
+            <div id="saved-items-container" class="saved-container">
+                <p class="empty-message">Your list is empty</p>
+                <a href="shop.html" class="saved-button">Continue Shopping</a>
+            </div>
+        </main>
 
-    <!-- Floating Maison-Margiela-style size dropdown -->
-    <div id="sizeDropdown" class="size-dropdown" aria-hidden="true">
-      <ul class="size-dropdown-list" role="menu" aria-label="Sizes"></ul>
-    </div>
+        <!-- Floating dropdown ONLY for sizes now -->
+        <div id="sizeDropdown" class="size-dropdown" aria-hidden="true">
+            <ul class="size-dropdown-list"></ul>
+        </div>
 
-    <div id="footer-placeholder"></div>
+        <div id="footer-placeholder"></div>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        // Load header
-        fetch("partials/header.html")
-          .then((res) => res.text())
-          .then((html) => {
-            document.getElementById("header-placeholder").innerHTML = html;
-            const script = document.createElement("script");
-            script.src = "js/header.js";
-            document.body.appendChild(script);
-          });
+        <script>
+            document.addEventListener("DOMContentLoaded", () => {
+                fetch("partials/header.html")
+                    .then(res => res.text())
+                    .then(html => {
+                        document.getElementById("header-placeholder").innerHTML = html;
+                        const script = document.createElement("script");
+                        script.src = "js/header.js";
+                        document.body.appendChild(script);
+                    });
 
-        // Load footer
-        fetch("partials/footer.html")
-          .then((res) => res.text())
-          .then((html) => {
-            document.getElementById("footer-placeholder").innerHTML = html;
-            const script = document.createElement("script");
-            script.src = "js/footer.js";
-            document.body.appendChild(script);
-          });
-      });
-    </script>
+                fetch("partials/footer.html")
+                    .then(res => res.text())
+                    .then(html => {
+                        document.getElementById("footer-placeholder").innerHTML = html;
+                        const script = document.createElement("script");
+                        script.src = "js/footer.js";
+                        document.body.appendChild(script);
+                    });
+            });
+        </script>
 
-    <script src="js/products.js"></script>
-    <script src="js/saved.js"></script>
-  </body>
+        <script src="js/products.js"></script>
+        <script src="js/saved.js"></script>
+    </body>
 </html>
