--- a/personal/atelier-personnage/shop.html
+++ b/personal/atelier-personnage/shop.html
@@ -1,164 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Atelier Personnage</title>
-    <link href="css/style.css" rel="stylesheet" />
-    <link href="css/shop.css" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-      crossorigin="anonymous"
-    />
-  </head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Atelier Personnage</title>
+        <link href="css/style.css" rel="stylesheet" />
+        <link href="css/shop.css" rel="stylesheet" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+            crossorigin="anonymous"
+        />
+    </head>
 
-  <body>
-    <div id="header-placeholder"></div>
+    <body>
+        <div id="header-placeholder"></div>
 
-    <div class="section">
-      <h3>READY-TO-WEAR</h3>
-    </div>
-
-    <div class="product-grid">
-      <!-- Product 1 -->
-      <div class="product-item" data-id="P001">
-        <a href="product.html?id=P001" class="button">
-          <i class="fa-regular fa-bookmark"></i>
-        </a>
-
-        <div class="image-slider">
-          <button class="arrow left">&#10094;</button>
-          <img src="images/item9.WEBP" class="active" alt="front" />
-          <img src="images/item8.WEBP" alt="back" />
-          <button class="arrow right">&#10095;</button>
-          <div class="slider-indicators"></div>
+        <div class="section">
+            <h3>READY-TO-WEAR</h3>
         </div>
 
-        <h3 class="product-name">RELAXED FIT PANTS</h3>
-        <p>$ 1660</p>
-      </div>
+        <div class="product-grid">
 
-      <!-- Product 2 -->
-      <div class="product-item" data-id="P002">
-        <a href="product.html?id=P002" class="button">
-          <i class="fa-regular fa-bookmark"></i>
-        </a>
+            <!-- Product 1 -->
+            <div class="product-item" data-id="P001">
+                <a href="item.html?id=P001" class="button">
+                    <i class="fa-regular fa-bookmark"></i>
+                </a>
 
-        <div class="image-slider">
-          <button class="arrow left">&#10094;</button>
-          <img src="images/tshirt1.WEBP" class="active" alt="front" />
-          <img src="images/tshirt2.AVIF" alt="back" />
-          <img src="images/tshirt3.AVIF" alt="side" />
-          <button class="arrow right">&#10095;</button>
-          <div class="slider-indicators"></div>
+                <a href="item.html?id=P001" class="card-link">
+                    <div class="image-slider">
+                        <button class="arrow left">&#10094;</button>
+                        <img src="images/item9.WEBP" class="active" alt="front" />
+                        <img src="images/item8.WEBP" alt="back" />
+                        <button class="arrow right">&#10095;</button>
+                        <div class="slider-indicators"></div>
+                    </div>
+
+                    <h3 class="product-name">RELAXED FIT PANTS</h3>
+                    <p>$ 1660</p>
+                </a>
+            </div>
+
+            <!-- Product 2 -->
+            <div class="product-item" data-id="P002">
+                <a href="item.html?id=P002" class="button">
+                    <i class="fa-regular fa-bookmark"></i>
+                </a>
+
+                <a href="item.html?id=P002" class="card-link">
+                    <div class="image-slider">
+                        <button class="arrow left">&#10094;</button>
+                        <img src="images/tshirt1.WEBP" class="active" alt="front" />
+                        <img src="images/tshirt2.AVIF" alt="back" />
+                        <img src="images/tshirt3.AVIF" alt="side" />
+                        <button class="arrow right">&#10095;</button>
+                        <div class="slider-indicators"></div>
+                    </div>
+
+                    <h3 class="product-name">RAGLAN OVERSIZE T-SHIRT</h3>
+                    <p>$ 1075</p>
+                </a>
+            </div>
+
+            <!-- Product 3 -->
+            <div class="product-item" data-id="P003">
+                <a href="item.html?id=P003" class="button">
+                    <i class="fa-regular fa-bookmark"></i>
+                </a>
+
+                <a href="item.html?id=P003" class="card-link">
+                    <div class="image-slider">
+                        <button class="arrow left">&#10094;</button>
+                        <img src="images/jacket1.AVIF" class="active" alt="front" />
+                        <img src="images/jacket2.AVIF" alt="back" />
+                        <img src="images/jacket3.AVIF" alt="side" />
+                        <button class="arrow right">&#10095;</button>
+                        <div class="slider-indicators"></div>
+                    </div>
+
+                    <h3 class="product-name">BOXY JACKET</h3>
+                    <p>$ 3885</p>
+                </a>
+            </div>
+
+            <!-- Product 4 -->
+            <div class="product-item" data-id="P004">
+                <a href="item.html?id=P004" class="button">
+                    <i class="fa-regular fa-bookmark"></i>
+                </a>
+
+                <a href="item.html?id=P004" class="card-link">
+                    <div class="image-slider">
+                        <button class="arrow left">&#10094;</button>
+                        <img src="images/pants1.WEBP" class="active" alt="front" />
+                        <img src="images/pants2.AVIF" alt="back" />
+                        <img src="images/pants3.AVIF" alt="side" />
+                        <button class="arrow right">&#10095;</button>
+                        <div class="slider-indicators"></div>
+                    </div>
+
+                        <h3 class="product-name">BAGGY PANTS</h3>
+                        <p>$ 1620</p>
+                </a>
+            </div>
+
         </div>
 
-        <h3 class="product-name">RAGLAN OVERSIZE T-SHIRT</h3>
-        <p>$ 1075</p>
-      </div>
+        <div id="footer-placeholder"></div>
 
-      <!-- Product 3 -->
-      <div class="product-item" data-id="P003">
-        <a href="product.html?id=P003" class="button">
-          <i class="fa-regular fa-bookmark"></i>
-        </a>
+        <script src="js/products.js"></script>
+        <script src="js/shop.js"></script>
 
-        <div class="image-slider">
-          <button class="arrow left">&#10094;</button>
-          <img src="images/jacket1.AVIF" class="active" alt="front" />
-          <img src="images/jacket2.AVIF" alt="back" />
-          <img src="images/jacket3.AVIF" alt="side" />
-          <button class="arrow right">&#10095;</button>
-          <div class="slider-indicators"></div>
-        </div>
+        <script>
+            document.addEventListener("DOMContentLoaded", () => {
+                // ====== LOAD HEADER ======
+                fetch("partials/header.html")
+                    .then((response) => response.text())
+                    .then((data) => {
+                        document.getElementById("header-placeholder").innerHTML = data;
 
-        <h3 class="product-name">BOXY JACKET</h3>
-        <p>$ 3885</p>
-      </div>
+                        const script = document.createElement("script");
+                        script.src = "js/header.js";
+                        document.body.appendChild(script);
+                    });
 
-      <!-- Product 4 -->
-      <div class="product-item" data-id="P004">
-        <a href="product.html?id=P004" class="button">
-          <i class="fa-regular fa-bookmark"></i>
-        </a>
+                // ====== LOAD FOOTER ======
+                fetch("partials/footer.html")
+                    .then((res) => res.text())
+                    .then((data) => {
+                        document.getElementById("footer-placeholder").innerHTML = data;
 
-        <div class="image-slider">
-          <button class="arrow left">&#10094;</button>
-          <img src="images/pants1.WEBP" class="active" alt="front" />
-          <img src="images/pants2.AVIF" alt="back" />
-          <img src="images/pants3.AVIF" alt="side" />
-          <button class="arrow right">&#10095;</button>
-          <div class="slider-indicators"></div>
-        </div>
+                        const script = document.createElement("script");
+                        script.src = "js/footer.js";
+                        document.body.appendChild(script);
+                    });
 
-        <h3 class="product-name">BAGGY PANTS</h3>
-        <p>$ 1620</p>
-      </div>
-    </div>
+                // ====== SEARCH LOGIC (runs when ?search=term in URL) ======
+                const urlParams = new URLSearchParams(window.location.search);
+                const searchTerm = urlParams.get("search");
 
-    <div id="footer-placeholder"></div>
+                if (searchTerm) {
+                    const term = searchTerm.toLowerCase();
+                    const products = document.querySelectorAll(".product-item");
+                    let found = false;
 
-    <script src="js/products.js"></script>
-    <script src="js/shop.js"></script>
+                    products.forEach((item) => {
+                        const name = item.querySelector("h3, .product-name").textContent.toLowerCase();
+                        if (name.includes(term)) {
+                            item.style.display = "block";
+                            if (!found) {
+                                item.scrollIntoView({ behavior: "smooth", block: "center" });
+                                found = true;
+                            }
+                        } else {
+                            item.style.display = "none";
+                        }
+                    });
 
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        // ====== LOAD HEADER ======
-        fetch("partials/header.html")
-          .then((response) => response.text())
-          .then((data) => {
-            document.getElementById("header-placeholder").innerHTML = data;
-
-            const script = document.createElement("script");
-            script.src = "js/header.js";
-            document.body.appendChild(script);
-          });
-
-        // ====== LOAD FOOTER ======
-        fetch("partials/footer.html")
-          .then((res) => res.text())
-          .then((data) => {
-            document.getElementById("footer-placeholder").innerHTML = data;
-
-            const script = document.createElement("script");
-            script.src = "js/footer.js";
-            document.body.appendChild(script);
-          });
-
-        // ====== SEARCH LOGIC (runs when ?search=term in URL) ======
-        const urlParams = new URLSearchParams(window.location.search);
-        const searchTerm = urlParams.get("search");
-
-        if (searchTerm) {
-          const term = searchTerm.toLowerCase();
-          const products = document.querySelectorAll(".product-item");
-          let found = false;
-
-          products.forEach((item) => {
-            const name =
-              item.querySelector("h3, .product-name").textContent.toLowerCase();
-            if (name.includes(term)) {
-              item.style.display = "block";
-              if (!found) {
-                item.scrollIntoView({ behavior: "smooth", block: "center" });
-                found = true;
-              }
-            } else {
-              item.style.display = "none";
-            }
-          });
-
-          if (!found) {
-            const msg = document.createElement("p");
-            msg.textContent = `No results found for "${searchTerm}"`;
-            msg.style.textAlign = "center";
-            msg.style.marginTop = "2rem";
-            msg.style.color = "#999";
-            document.querySelector(".product-grid").after(msg);
-          }
-        }
-      });
-    </script>
-  </body>
+                    if (!found) {
+                        const msg = document.createElement("p");
+                        msg.textContent = `No results found for "${searchTerm}"`;
+                        msg.style.textAlign = "center";
+                        msg.style.marginTop = "2rem";
+                        msg.style.color = "#999";
+                        document.querySelector(".product-grid").after(msg);
+                    }
+                }
+            });
+        </script>
+    </body>
 </html>
